# okiltv

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  COMMERCIAL_LICENSE.md  README.md  build_linux.sh  build_windows.sh  build_windows_portable.sh  build_windows_zip.sh
qt/: CMakeLists.txt
qt/qml/: .qmllint.ini  Main.qml
qt/qml/components/: AppButton.qml  ChannelBadge.qml  EpgHoverBubble.qml  FormComboBox.qml  FormSpinBox.qml  FormSwitch.qml  FormTextField.qml  GlassPanel.qml  IconActionButton.qml  OverlaySectionPanel.qml  PathBrowseField.qml  SettingsRailButton.qml  SourceManagerPane.qml  WindowChromeBar.qml  WindowResizeHandles.qml
qt/qml/screens/: GuidePage.qml  LiveTvPage.qml  SettingsPage.qml
qt/qml/theme/: Theme.js
qt/resources/windows/: app_icon.rc
qt/src/app/: appcontroller.cpp  appcontroller.h  channellistmodel.cpp  channellistmodel.h  displaysleepblocker.cpp  displaysleepblocker.h  dvrcontroller.cpp  dvrcontroller.h  epggridmodel.cpp  epggridmodel.h  guidestatemodel.cpp  guidestatemodel.h  main.cpp  multiviewcontroller.cpp  multiviewcontroller.h  nownextmodel.cpp  nownextmodel.h  playercontroller.cpp  playercontroller.h  portableruntimecontroller.cpp  portableruntimecontroller.h  profilesmodel.cpp  profilesmodel.h  settingscontroller.cpp  settingscontroller.h  shellcontroller.cpp  shellcontroller.h  sourcegroupsmodel.cpp  sourcegroupsmodel.h  timeshiftcontroller.cpp  timeshiftcontroller.h  traycontroller.cpp  traycontroller.h  uitestbridge.cpp  uitestbridge.h  uitestcapturecontroller.cpp  uitestcapturecontroller.h
qt/src/core/: appdatapaths.cpp  appdatapaths.h  catchupurlresolver.cpp  catchupurlresolver.h  database_service.cpp  database_service.h  debuglogger.cpp  debuglogger.h  epgcache_service.cpp  epgcache_service.h  epgservice.cpp  epgservice.h  iconcache_service.cpp  iconcache_service.h  m3uservice.cpp  m3uservice.h  models.cpp  models.h  models_json.cpp  models_variant.cpp  networkaccess.cpp  networkaccess.h  portablebootstrap.cpp  portablebootstrap.h  processutils.cpp  processutils.h  redaction.cpp  redaction.h  settingsmanager.cpp  settingsmanager.h  sourcestore.cpp  sourcestore.h  xtreamservice.cpp  xtreamservice.h
qt/src/player/: catchupstreamsession.cpp  catchupstreamsession.h  mpvplayer.cpp  mpvplayer.h  mpvvideoitem.cpp  mpvvideoitem.h
qt/tests/: CMakeLists.txt  tst_app_models.cpp  tst_core.cpp
scripts/: build_jobs.sh  package_qt_win64.sh  run_clang_tidy_src.sh
scripts/windows/: cpack_nsis_config.cmake.in  installer_license.txt  portable_launcher.nsi
